@@ -17,17 +17,13 @@ import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.util.*;
-import java.util.stream.Collectors;
-
 
 @RequireRoles({"ADMIN", "OPERATOR"})
-public class AddMembersToGroupHandler implements HttpHandler {
-
-    private static final Logger logger = LoggerFactory.getLogger(AddMembersToGroupHandler.class);
+public class AddServicesToGroupHandler implements HttpHandler {
+    private static final Logger logger = LoggerFactory.getLogger(AddServicesToGroupHandler.class);
 
     @Override
     public void handleRequest(HttpServerExchange exchange) throws Exception {
-
         UserContext ctx = exchange.getAttachment(UserContext.ATTACHMENT_KEY);
         if (ctx == null) {
             ResponseUtil.sendError(exchange, StatusCodes.UNAUTHORIZED, "User context missing");
@@ -37,7 +33,7 @@ public class AddMembersToGroupHandler implements HttpHandler {
         String groupUuidStr = exchange.getQueryParameters().get("uuid") != null ?
                 exchange.getQueryParameters().get("uuid").getFirst() : null;
         if (groupUuidStr == null) {
-            ResponseUtil.sendError(exchange, StatusCodes.BAD_REQUEST, "Missing group ID in URL");
+            ResponseUtil.sendError(exchange, StatusCodes.BAD_REQUEST, "Missing group uuid");
             return;
         }
 
@@ -45,24 +41,23 @@ public class AddMembersToGroupHandler implements HttpHandler {
         try {
             groupUuid = UUID.fromString(groupUuidStr);
         } catch (IllegalArgumentException e) {
-            ResponseUtil.sendError(exchange, StatusCodes.BAD_REQUEST, "Invalid group UUID");
+            ResponseUtil.sendError(exchange, StatusCodes.BAD_REQUEST, "Invalid group uuid");
             return;
         }
 
         Map<String, Object> body = HttpRequestUtil.parseJson(exchange);
         if (body == null) return;
 
-        List<Integer> members = (List<Integer>) body.get("membersIds");
-        if (members == null || members.isEmpty()) {
-            ResponseUtil.sendError(exchange, StatusCodes.BAD_REQUEST, "Missing or empty membersIds array");
+        List<Integer> serviceIds = (List<Integer>) body.get("serviceIds");
+        if (serviceIds == null || serviceIds.isEmpty()) {
+            ResponseUtil.sendError(exchange, StatusCodes.BAD_REQUEST, "Missing or Empty serviceIds array");
             return;
         }
 
         try (Connection conn = Objects.requireNonNull(DatabaseManager.getDataSource()).getConnection()) {
             conn.setAutoCommit(false);
-
-            String groupSql = "SELECT contact_group_id FROM contact_groups WHERE uuid = ? AND is_deleted = FALSE";
             long groupId;
+            String groupSql = "SELECT contact_group_id FROM contact_groups WHERE uuid = ?";
             try (PreparedStatement ps = conn.prepareStatement(groupSql)) {
                 ps.setObject(1, groupUuid);
                 try (ResultSet rs = ps.executeQuery()) {
@@ -74,71 +69,72 @@ public class AddMembersToGroupHandler implements HttpHandler {
                 }
             }
 
-            logger.info("Attempting to add {} members to group {} (UUID={}) by user {}", members.size(), groupId, groupUuid, ctx.email());
 
-            Set<Integer> existingMembers = new HashSet<>();
-            String existingSql = "SELECT user_id FROM contact_group_members WHERE contact_group_id = ?";
+            logger.info("Attempting to add {} services to group {} (UUID={}) by user {}", serviceIds.size(), groupId, groupUuid, ctx.email());
+
+            Set<Integer> existingServices = new HashSet<>();
+            String existingSql = "SELECT monitored_service_id FROM monitored_services_contact_groups WHERE contact_group_id = ?";
             try (PreparedStatement ps = conn.prepareStatement(existingSql)) {
                 ps.setLong(1, groupId);
                 try (ResultSet rs = ps.executeQuery()) {
                     while (rs.next()) {
-                        existingMembers.add(rs.getInt("user_id"));
+                        existingServices.add(rs.getInt("monitored_service_id"));
                     }
                 }
             }
 
-            List<Integer> newMembers = members.stream()
+
+            List<Integer> newServices = serviceIds.stream()
                     .filter(Objects::nonNull)
-                    .filter(memberId -> !existingMembers.contains(memberId))
+                    .filter(id -> !existingServices.contains(id))
                     .toList();
 
-            if (newMembers.isEmpty()) {
-                ResponseUtil.sendSuccess(exchange,"No new members to add", null);
+            if (newServices.isEmpty()) {
+                ResponseUtil.sendSuccess(exchange, "No new services to add", null);
                 return;
             }
 
+
             try (PreparedStatement ps = conn.prepareStatement("""
-                INSERT INTO contact_group_members (contact_group_id, user_id, is_primary)
-                VALUES (?, ?, FALSE)
-                ON CONFLICT (contact_group_id, user_id) DO NOTHING;
-            """)) {
-                for (Integer memberId : newMembers) {
-                    ps.setLong(1, groupId);
-                    ps.setLong(2, memberId);
+                INSERT INTO monitored_services_contact_groups (monitored_service_id, contact_group_id)
+                VALUES (?, ?)
+                ON CONFLICT (monitored_service_id, contact_group_id) DO NOTHING;
+                """)) {
+                for (Integer serviceId : newServices ) {
+                    ps.setLong(1, serviceId);
+                    ps.setLong(2, groupId);
                     ps.addBatch();
                 }
 
                 int[] results = ps.executeBatch();
                 conn.commit();
 
-                int inserted = (int) java.util.Arrays.stream(results).filter(r -> r >= 0).count();
-                logger.info("Added {} new members to group {} (UUID={})", inserted, groupId, groupUuid);
+                int inserted = (int) Arrays.stream(results).filter(r -> r >= 0).count();
+                logger.info("Added {} new services to group {} (UUID={})", inserted, groupId, groupUuid);
 
-                List<Map<String, Integer>> afterDataList = newMembers.stream()
+                List<Map<String, Integer>> afterDataList = newServices.stream()
                         .filter(Objects::nonNull)
-                        .map(memberId -> Map.of("user_id", memberId))
-                        .collect(Collectors.toList()).reversed();
+                        .map(id -> Map.of("service_id", id))
+                        .toList().reversed();
+
 
                 if (!afterDataList.isEmpty()) {
                     String afterDataJson = JsonUtil.mapper().writeValueAsString(afterDataList);
-
                     AuditLogger.log(
                             exchange,
-                            "contact_group_members",
+                            "monitored_services_contact_groups",
                             groupId,
                             "CREATE",
                             null,
                             afterDataJson
                     );
                 }
-
-
-                ResponseUtil.sendCreated(exchange, inserted + " members added successfully", null);
+                ResponseUtil.sendCreated(exchange, inserted + " services added successfully", null);
             }
-
-        } catch (Exception e) {
-            logger.error("Failed to add members to group (UUID={}): {}", groupUuid, e.getMessage(), e);
+        }catch (Exception e) {
+            logger.error("Failed to add services to group (UUID={}): {}", groupUuid, e.getMessage(), e);
             ResponseUtil.sendError(exchange, StatusCodes.INTERNAL_SERVER_ERROR, e.getMessage());
         }
+
     }
 }
